Upgrade works, and the app features are deployed. Will now move Ryan_Serialization over to the new system, while testing Ryan_Debug cmake functionality. If the cmake script fails, then further updates to Ryan_Debug's CMakeLists.txt will be necessary.
git-svn-id: file:///mnt/svn/ryan-debug@53 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,20 +265,21 @@ if (MAKE_ASSEMBLY)
 		)
 
 	# Add installation targets for the library manifest, the sample app manifest and the library catalog
-	#INSTALL(FILES 
-	#	"${CMAKE_CURRENT_BINARY_DIR}/Ryan.Debug.DebugAssembly.cat"
-	#	"${CMAKE_CURRENT_BINARY_DIR}/Ryan.Debug.DebugAssembly.manifest"
-	#	"${CMAKE_CURRENT_BINARY_DIR}/${PublisherManifestName}"
-	#	"${CMAKE_CURRENT_BINARY_DIR}/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat"
-	#	DESTINATION "${INSTALL_ASSEMBLY_DIR}" COMPONENT Libraries)
+	INSTALL(FILES 
+		"${CMAKE_CURRENT_BINARY_DIR}/Release/Ryan.Debug.DebugAssembly.cat"
+		"${CMAKE_CURRENT_BINARY_DIR}/Release/Ryan.Debug.DebugAssembly.manifest"
+		"${CMAKE_CURRENT_BINARY_DIR}/${PublisherManifestName}"
+		"${CMAKE_CURRENT_BINARY_DIR}/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat"
+		DESTINATION "${INSTALL_ASSEMBLY_DIR}" COMPONENT Libraries)
 
 	#INSTALL(FILES
 	#	"${MANIFEST_APP_SNIPPET_NAME}"
 	#	DESTINATION "${INSTALL_INCLUDE_DIR}/Ryan_Debug" COMPONENT Headers)
 
-	#INSTALL(FILES
-	#	"${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.wxs"
-	#	DESTINATION "${INSTALL_INCLUDE_DIR}/.." COMPONENT Scripts)
+	INSTALL(FILES
+		"${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.wxs"
+		"${CMAKE_CURRENT_SOURCE_DIR}/deploy.bat"
+		DESTINATION "${INSTALL_INCLUDE_DIR}/.." COMPONENT Scripts)
 
 endif()
 
