Small bug fixes plus one function def change.
git-svn-id: file:///mnt/svn/ryan-debug@54 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/src/manifestref.h.in
+++ b/src/manifestref.h.in
@@ -6,10 +6,10 @@
 // The manifest component name depends on whether a debug or release build is using the app.
 // This is for ease of use when debugging.
 #ifndef RYAN_DEBUG_ASSEMBLY_RELEASE
-#define RYAN_DEBUG_ASSEMBLY_RELEASE "'@ASSEMBLY_NAME_RELEASE@'"
+#define RYAN_DEBUG_ASSEMBLY_RELEASE "'@ASSEMBLY_NAME_Release@'"
 #endif
 #ifndef RYAN_DEBUG_ASSEMBLY_DEBUG
-#define RYAN_DEBUG_ASSEMBLY_DEBUG "'@ASSEMBLY_NAME_DEBUG@'"
+#define RYAN_DEBUG_ASSEMBLY_DEBUG "'@ASSEMBLY_NAME_Debug@'"
 #endif
 
 #ifndef RYAN_DEBUG_ASSEMBLY_NAME
