Small header fix (forgot to install)
git-svn-id: file:///mnt/svn/ryan-debug@55 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,12 +272,13 @@ if (MAKE_ASSEMBLY)
 		"${CMAKE_CURRENT_BINARY_DIR}/policy.@MAJOR@.@MINOR@.Ryan.Debug.DebugAssembly.cat"
 		DESTINATION "${INSTALL_ASSEMBLY_DIR}" COMPONENT Libraries)
 
-	#INSTALL(FILES
-	#	"${MANIFEST_APP_SNIPPET_NAME}"
-	#	DESTINATION "${INSTALL_INCLUDE_DIR}/Ryan_Debug" COMPONENT Headers)
+	INSTALL(FILES
+		"${MANIFEST_APP_SNIPPET_NAME}"
+		DESTINATION "${INSTALL_INCLUDE_DIR}/Ryan_Debug" COMPONENT Headers)
 
 	INSTALL(FILES
 		"${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.wxs"
+		"${CMAKE_CURRENT_SOURCE_DIR}/upgrade.bat"
 		"${CMAKE_CURRENT_SOURCE_DIR}/deploy.bat"
 		DESTINATION "${INSTALL_INCLUDE_DIR}/.." COMPONENT Scripts)
 
