Ryan_Debug library now has linux dll-table querying.
git-svn-id: file:///mnt/svn/ryan-debug@58 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ if (WIN32 AND NOT CYGWIN)
 		set(liblist ${Boost_LIBRARIES})
 	endif()
 else()
-	set(liblist ${Boost_LIBRARIES})
+	set(liblist ${Boost_LIBRARIES} dl)
 endif()
 #message("${liblist}")
 
