--- a/src/lib.rc.in
+++ b/src/lib.rc.in
@@ -76,7 +76,7 @@ BEGIN
             VALUE "FileVersion", "@MAJOR@,@MINOR@,@REVISION@," EXPAND_AND_QUOTE(SUB_REV)
             VALUE "InternalName", "Ryan_Debug"
             VALUE "LegalCopyright", "Copyright (C) 2014 Ryan Honeyager"
-            VALUE "OriginalFilename", "Ryan_Debug" CONF ".dll"
+            VALUE "OriginalFilename", "Ryan_Debug_" CONF ".dll"
             VALUE "ProductName", "Ryan_Debug"
             VALUE "ProductVersion", "@MAJOR@.@MINOR@.@REVISION@." EXPAND_AND_QUOTE(SUB_REV)
         END
