git-svn-id: file:///mnt/svn/ryan-debug@60 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/manifestref.h.in
+++ b/manifestref.h.in
@@ -11,14 +11,25 @@
 #ifndef RYAN_DEBUG_ASSEMBLY_DEBUG
 #define RYAN_DEBUG_ASSEMBLY_DEBUG "'@ASSEMBLY_NAME_Debug@'"
 #endif
+#ifndef RYAN_DEBUG_ASSEMBLY_RELWITHDEBINFO
+#define RYAN_DEBUG_ASSEMBLY_RELWITHDEBINFO "'@ASSEMBLY_NAME_RelWithDebInfo@'"
+#endif
+#ifndef RYAN_DEBUG_ASSEMBLY_MINSIZEREL
+#define RYAN_DEBUG_ASSEMBLY_MINSIZEREL "'@ASSEMBLY_NAME_MinSizeRel@'"
+#endif
+
 
 #ifndef RYAN_DEBUG_ASSEMBLY_NAME
 #ifdef RYAN_DEBUG_FORCE_RELEASE
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELEASE
 #else
 #ifdef BUILDTYPE
-#if (BUILDTYPE == "Debug") || (BUILDTYPE == "RelWithDebInfo")
+#if (BUILDTYPE == "Debug")
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_DEBUG
+#elif (BUILDTYPE == "RelWithDebInfo")
+#define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELWITHDEBINFO
+#elif (BUILDTYPE == "MinSizeRel")
+#define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_MINSIZEREL
 #else
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELEASE
 #endif
