--- a/apps/Debug-test/CMakeLists.txt
+++ b/apps/Debug-test/CMakeLists.txt
@@ -1,5 +1,6 @@
 include (SVNinfo)
 include (signing)
+include (addconfiginfo)
 
 configure_file(test.rc.in
 	"${CMAKE_CURRENT_BINARY_DIR}/test.rc" @ONLY)
@@ -13,6 +14,7 @@ add_executable (Ryan_Debug-test
 	"${CMAKE_CURRENT_BINARY_DIR}/test.rc"
 	${addfiles})
 set_target_properties( Ryan_Debug-test PROPERTIES FOLDER "Apps")
+addconfiginfo(Ryan_Debug-test)
 target_link_libraries(Ryan_Debug-test ${liblist} Ryan_Debug)
 if (MAKE_ASSEMBLY)
 	signing(Ryan_Debug-test)
@@ -20,7 +22,7 @@ endif()
 
 INSTALL(TARGETS Ryan_Debug-test
 	EXPORT Ryan_DebugTargets
-	RUNTIME DESTINATION ${INSTALL_BIN_DIR}
+	RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
 	COMPONENT Applications
 	)
 
