--- a/manifestref.h.in
+++ b/manifestref.h.in
@@ -18,17 +18,21 @@
 #define RYAN_DEBUG_ASSEMBLY_MINSIZEREL "'@ASSEMBLY_NAME_MinSizeRel@'"
 #endif
 
+#define RYAN_DEBUG_BUILDTYPE_Debug 1
+#define RYAN_DEBUG_BUILDTYPE_Release 2
+#define RYAN_DEBUG_BUILDTYPE_MinSizeRel 3
+#define RYAN_DEBUG_BUILDTYPE_RelWithDebInfo 4
 
 #ifndef RYAN_DEBUG_ASSEMBLY_NAME
 #ifdef RYAN_DEBUG_FORCE_RELEASE
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELEASE
 #else
 #ifdef BUILDTYPE
-#if (BUILDTYPE == "Debug")
+#if (BUILDTYPE == RYAN_DEBUG_BUILDTYPE_Debug)
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_DEBUG
-#elif (BUILDTYPE == "RelWithDebInfo")
+#elif (BUILDTYPE == RYAN_DEBUG_BUILDTYPE_RelWithDebInfo)
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELWITHDEBINFO
-#elif (BUILDTYPE == "MinSizeRel")
+#elif (BUILDTYPE == RYAN_DEBUG_BUILDTYPE_MinSizeRel)
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_MINSIZEREL
 #else
 #define RYAN_DEBUG_ASSEMBLY_NAME RYAN_DEBUG_ASSEMBLY_RELEASE
